examples/invalid/semanticErr/function/functionSwapArgs.wacc
# function call with arguments swapped
# Output:
# #semantic error#

#Program:#

begin
	int f(int a, bool b) is
		return 0 
	end
	int x = call f(true,1);
	println x
end

	
